outout.txt
tools/ErrorMessage.java:10: warning: auxiliary class RecordEntry in DataEntry.java should not be accessed from outside its own source file
	RecordEntry recordEntry; //if there's any record associated with the error
	^
tools/ErrorMessage.java:13: warning: auxiliary class RecordEntry in DataEntry.java should not be accessed from outside its own source file
	public ErrorMessage(RecordEntry recordEntry,String message,ErrorType type)
	                    ^
tools/MongoDriver.java:17: warning: [deprecation] getDB(String) in Mongo has been deprecated
 		DB database = mongoClient.getDB(db);
 		                         ^
tools/MongoDriver.java:20: error: cannot find symbol
				DBCollection<Document> collection = database.getCollection(recordEntry.getTable());
				^
  symbol:   class DBCollection
  location: class MongoDriver
tools/MySqlDriver.java:49: warning: auxiliary class RecordEntry in DataEntry.java should not be accessed from outside its own source file
			for(RecordEntry recordEntry: dataEntry.getRecordEntries())
			    ^
tools/MySqlDriver.java:49: error: incompatible types: DataEntry.RecordEntry cannot be converted to tools.RecordEntry
			for(RecordEntry recordEntry: dataEntry.getRecordEntries())
			                                                       ^
2 errors
4 warnings
